# proceso_maestro

./: CMakeLists.txt  config.txt  configuracion.cpp  main.cpp  proceso_maestro.cbp  proceso_maestro.depend  proceso_maestro.layout  usuarios_contrasenias.txt
include/: autenticacion.h  estructuras.h  nube.h  servidor_qr.h  socket_y_sesion.h
src/: autenticacion.cpp  estructuras.cpp  nube.cpp  servidor_qr.cpp  socket_y_sesion.cpp
